--- a/landingPage/css/project.css
+++ b/landingPage/css/project.css
@@ -222,27 +222,61 @@ section {
       section .container .right_con figure > img:nth-of-type(2) {
         z-index: 10; }
       section .container .right_con figure div {
-        width: 46%;
         overflow: hidden; }
       section .container .right_con figure div:nth-of-type(1) {
         position: absolute;
-        left: 31%;
-        top: 31.7%; }
+        left: 31.5%;
+        top: 31.8%;
+        width: 55.5%;
+        height: 30%; }
+      section .container .right_con figure div:nth-of-type(1):after {
+        content: '';
+        width: 0%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: #000;
+        transition: .4s; }
+      section .container .right_con figure div:nth-of-type(1):before {
+        content: '';
+        width: 0%;
+        height: 100%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure div:nth-of-type(2) {
         position: absolute;
-        left: 66%;
+        left: 66.5%;
         top: 56.2%; }
       section .container .right_con figure div:nth-of-type(3) {
         position: absolute;
         left: 26.3%;
-        top: 63%; }
+        top: 63.1%; }
       section .container .right_con figure div img {
-        margin-left: 0px;
         opacity: 1;
-        transition: .5s; }
+        transition: .5s;
+        height: 100%; }
       section .container .right_con figure.active div img {
-        opacity: 0;
-        margin-left: 50px; }
+        opacity: 0; }
+      section .container .right_con figure.active div:nth-of-type(1):after {
+        content: '';
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: #000; }
+      section .container .right_con figure.active div:nth-of-type(1):before {
+        content: '';
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-color: #000; }
     section .container .right_con.active {
       right: 0%; }
     section .container .pop_up {
