--- a/landingPage/css/contact.css
+++ b/landingPage/css/contact.css
@@ -131,7 +131,8 @@ section {
       transition: .5s; }
       section .container .right_con article {
         padding-top: 10%;
-        height: 100%; }
+        height: 100%;
+        opacity: 0; }
         section .container .right_con article h1 {
           font-size: 2em;
           margin-bottom: 5%;
@@ -169,7 +170,12 @@ section {
           color: #fff; }
     section .container .right_con.active {
       top: 0%;
-      opacity: 1;
-      transition-delay: .7s; }
+      transition-delay: .7s;
+      transition: .5s;
+      opacity: 1; }
+      section .container .right_con.active article {
+        opacity: 1;
+        transition: .6s;
+        transition-delay: .9s; }
 
 /*# sourceMappingURL=contact.css.map */
