--- a/landingPage/css/index.css
+++ b/landingPage/css/index.css
@@ -52,36 +52,42 @@ section .visual {
     color: #fff;
     transition: .5s; }
     section .visual figcaption h1 {
+      color: #fff;
       font-size: 4em;
       position: relative;
       opacity: 0;
-      margin-top: -5%;
-      transition: .5s; }
+      margin-top: -5%; }
     section .visual figcaption h1.show {
-      opacity: 1;
-      margin-top: 0%;
-      transition-delay: .5s; }
+      animation: h1 1s forwards; }
     section .visual figcaption h1:after {
       content: '';
       display: inline-block;
-      width: 100%;
+      width: 0%;
       height: 2px;
       background-color: #ddd;
       position: absolute;
-      left: 0;
-      bottom: -10px; }
+      left: 50%;
+      bottom: -10px;
+      transition: .5s .5s; }
+    section .visual figcaption h1.show:after {
+      width: 100%;
+      left: 0; }
     section .visual figcaption p {
       white-space: pre-line;
       margin-top: 150px;
       font-size: 1rem;
       color: #ddd;
-      opacity: 0;
-      transition: 1s; }
+      opacity: 0; }
     section .visual figcaption p.show {
-      opacity: 1;
-      margin-top: 100px;
-      transition-delay: 1s; }
-
+      animation: p .5s .7s forwards; }
+@keyframes h1 {
+  100% {
+    opacity: 1;
+    margin-top: 0%; } }
+@keyframes p {
+  100% {
+    opacity: 1;
+    margin-top: 100px; } }
 footer {
   position: absolute;
   left: 0;
