--- a/landingPage/css/index.css
+++ b/landingPage/css/index.css
@@ -5,6 +5,7 @@ body {
 
 #total {
   width: 100%;
+  height: 100vh;
   position: relative;
   overflow: hidden; }
 
@@ -23,63 +24,68 @@ header {
   header div {
     padding: 2%; }
 
-section .visual {
-  display: flex;
-  position: relative; }
-  section .visual img:nth-of-type(1) {
-    position: relative;
-    left: 0;
-    top: 0;
+section {
+  width: 100%;
+  height: 100%; }
+  section .visual {
+    width: 100%;
     height: 100%;
-    width: 50%; }
-  section .visual img:nth-of-type(2) {
-    position: relative;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 50%; }
-  section .visual img:nth-of-type(1).left {
-    animation: aniPosition1 .5s linear forwards; }
-  section .visual img:nth-of-type(2).right {
-    animation: aniPosition2 .5s linear forwards; }
-  section .visual figcaption {
-    z-index: 10;
-    position: absolute;
-    left: 25%;
-    top: 35%;
-    opacity: 1;
-    text-align: center;
-    color: #fff;
-    transition: .5s; }
-    section .visual figcaption h1 {
-      color: #fff;
-      font-size: 4em;
+    display: flex;
+    position: relative; }
+    section .visual img:nth-of-type(1) {
       position: relative;
-      opacity: 0;
-      margin-top: -5%; }
-    section .visual figcaption h1.show {
-      animation: h1 1s forwards; }
-    section .visual figcaption h1:after {
-      content: '';
-      display: inline-block;
-      width: 0%;
-      height: 2px;
-      background-color: #ddd;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 50%; }
+    section .visual img:nth-of-type(2) {
+      position: relative;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 50%; }
+    section .visual img:nth-of-type(1).left {
+      animation: aniPosition1 .5s linear forwards; }
+    section .visual img:nth-of-type(2).right {
+      animation: aniPosition2 .5s linear forwards; }
+    section .visual figcaption {
+      z-index: 10;
       position: absolute;
-      left: 50%;
-      bottom: -10px;
-      transition: .5s .5s; }
-    section .visual figcaption h1.show:after {
-      width: 100%;
-      left: 0; }
-    section .visual figcaption p {
-      white-space: pre-line;
-      margin-top: 150px;
-      font-size: 1rem;
-      color: #ddd;
-      opacity: 0; }
-    section .visual figcaption p.show {
-      animation: p .5s .7s forwards; }
+      left: 25%;
+      top: 35%;
+      opacity: 1;
+      text-align: center;
+      color: #fff;
+      transition: .5s; }
+      section .visual figcaption h1 {
+        color: #fff;
+        font-size: 4em;
+        position: relative;
+        opacity: 0;
+        margin-top: -5%; }
+      section .visual figcaption h1.show {
+        animation: h1 1s forwards; }
+      section .visual figcaption h1:after {
+        content: '';
+        display: inline-block;
+        width: 0%;
+        height: 2px;
+        background-color: #ddd;
+        position: absolute;
+        left: 50%;
+        bottom: -10px;
+        transition: .5s .5s; }
+      section .visual figcaption h1.show:after {
+        width: 100%;
+        left: 0; }
+      section .visual figcaption p {
+        white-space: pre-line;
+        margin-top: 150px;
+        font-size: 1rem;
+        color: #ddd;
+        opacity: 0; }
+      section .visual figcaption p.show {
+        animation: p .5s .7s forwards; }
 @keyframes h1 {
   100% {
     opacity: 1;
@@ -113,5 +119,36 @@ footer {
     transform: translateX(50%); }
   100% {
     transform: translateX(100%); } }
+@media (max-width: 1024px) {
+  section .visual figcaption {
+    left: 15%; }
+    section .visual figcaption h1 {
+      font-size: 3em; } }
+@media (max-width: 768px) {
+  section .visual figcaption {
+    left: 7%; }
+    section .visual figcaption h1 {
+      font-size: 2em; }
+    section .visual figcaption p {
+      padding: 0 3% 0 3%; }
+
+  section .visual figcaption h1.show:after {
+    width: 70%;
+    left: 15%; } }
+@media (max-width: 480px) {
+  header div {
+    text-align: center;
+    margin-top: 55px; }
+
+  section .visual figcaption {
+    left: 0%; }
+    section .visual figcaption h1 {
+      font-size: 1.5em; }
+    section .visual figcaption p {
+      padding: 0 10% 0 10%; }
+
+  section .visual figcaption h1.show:after {
+    width: 75%;
+    left: 12%; } }
 
 /*# sourceMappingURL=index.css.map */
