--- a/landingPage/css/contact.scss
+++ b/landingPage/css/contact.scss
@@ -107,14 +107,14 @@ section{
             left:-30%;
             transition:.5s;
             & figure{
+                background-color:#f95959;
                 width:20%;
                 padding:3% 5%;
                 position:absolute;
-                opacity:0;
                 right:0;
                 top:20%;
-                transition:.5s;
-                transition-delay:.5s;
+                opacity:0;
+                transition:1s;
                 & img{
                     width:100%;
                 }
@@ -131,14 +131,22 @@ section{
                 right:-15%;
                 top:20%;
                 opacity:1;
+                transition:1s;
                 & img{
-                    width:100%;
+                    width:100%;                   
                 }
                 & figcaption{
                     text-align:center;
                     color:#fff;
                 }
             }
+        }
+        & .contact_link{
+            display:flex;
+            justify-content:space-around;
+            background-color:#f95959;
+            width:100%;
+            margin-top:20px;
         }
         & .left_con.active{
             left:0;
