--- a/landingPage/css/project.scss
+++ b/landingPage/css/project.scss
@@ -175,13 +175,21 @@ section{
                         margin-top:10px;
                     }
                     & .cont_btn{
-                        position:relative;
-                        width:30px;
+                        position:absolute;
+                        width:60px;
+                        right:-160px;
+                        top:-110px;
+                        background-color:#f95959;
+                        height:35px;
+                        padding:1%;
+                        border-radius:50px;
                         & span{
-                            margin-top:10px;
+                            // margin-top:10px;
                             display:none;
                             transition:.5s;
                             position:absolute;
+                            left:20px;
+                            top:6px;
                         }
                         & span.active{
                             display:block;
@@ -449,6 +457,18 @@ footer.active{
     padding-left:11.5%;
 }
 
-@media (max-width:480px){
-    div{display:none;}
+// ------------------------------------- media ----------------------------------
+
+@media(max-width:1024px){
+    #total{
+        overflow-x:scroll;
+        overflow-y:scroll;
+    }
+    
+}
+@media(max-width:768px){
+
+}
+@media(max-width:480px){
+
 }
